* upgraded plastic look and feel to version 1.3.1 (sgb)

* add vc drawing and added vc cities to stats (sgb)

* better email address ui and validation, allow up to 5 emails in to and copy (sgb)

* added white factory images (zero_pilot)

* added drawing capitol markers (capitol markers contributed by black elk) (sgb)

* added junit.jar file to lib and removed it from .ant.properties (sgb)

* fixed bug  [ 1070176 ] Mistakes in calculating Battlescore (change in TUV) (sgb)

* fixed bug [ 1116632 ] v0.5.1.1 TripleA skipping battle in Borneo (sgb)

* fixed bug [ 1145318 ] Another Error on 5.2.2 (sgb)

* fixed bug [ 1157717 ] 0.5.2.2 Error with question : Sumerge subs (sgb)

* fixed bug [ 1175467 ] game "stuck" when doing multiple battles with same units (sgb)

* fixed bug [ 1171596 ] Rocket Tech bug v0.5.2.2, we now always ask what territory to attack with rockets, even if there is only one choice, this allows the user to decline a rocket attack (sgb)

* during battles the dice are sorted according to unit type so that when you review the dice rolls, you can tell what unit rolled for which dice

* fix bug [ 1144356 ] alter email header on PBEM (this is really a feature request) (sgb)

* added new chinese units and cruiser, halftrack, marine units (iron_cross)

* fixed [ 1158469 ] Missing units in Purchase Menu when odd number of choices (sgb)

* you can now specify victory cities in xml using a territory attachement (sgb)

* added tile map drawing (sgb)

* add a copy to clipboard button on the console (sgb)

* if available, console will print stack traces when enumerating threads (sgb)

* put neutral player color in map.properties (sgb)

Change for 0.5.2.2

* fixed Dont play button on client screen. (sgb)

* threading fixes. (sgb)

Changes for 0.5.2

* add switch in map.properties to disable scrolling map around the edges (sgb)
 
* added scripted random for debugging (sgb)

* added new map by WanderingHead (wandering head)
