@@ -1,3 +1,5 @@
+* add stat export menu item Game->Export Game Stats (sgb)
+
 * upgraded plastic look and feel to version 1.3.1 (sgb)
 
 * add vc drawing and added vc cities to stats (sgb)
